@@ -3,7 +3,6 @@ package org.openl.rules.binding;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.IdentityHashMap;
 import java.util.List;
@@ -306,7 +305,7 @@ public class RulesModuleBindingContext extends ModuleBindingContext {
                     findType(t.getName());
                 }
             }
-            openMethodBinders = Collections.singletonList(openMethodBinder);
+            openMethodBinders = List.of(openMethodBinder);
         }
         Optional<RecursiveOpenMethodPreBinder> prebindingOpenMethodPreBinder = openMethodBinders.stream()
                 .filter(RecursiveOpenMethodPreBinder::isPreBindStarted)
