@@ -1,8 +1,8 @@
 package org.openl.types;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
@@ -197,7 +197,7 @@ public class StaticOpenClass implements IOpenClass {
 
     @Override
     public Collection<IOpenClass> superClasses() {
-        return Collections.singleton(JavaOpenClass.CLASS);
+        return Set.of(JavaOpenClass.CLASS);
     }
 
     @Override
