@@ -1,7 +1,6 @@
 package org.openl.validation;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -44,7 +43,7 @@ public class ValidationManager {
      */
     public static List<ValidationResult> processValidation(ICompileContext context, IOpenClass openClass) {
         if (!ValidationManager.isValidationEnabled()) {
-            return Collections.emptyList();
+            return List.of();
         }
         var results = new ArrayList<ValidationResult>();
         // Check that compile context initialized. If context is null or
@@ -58,7 +57,7 @@ public class ValidationManager {
                     results.add(result);
                 } catch (Exception e) {
                     result = new ValidationResult(ValidationStatus.FAIL,
-                            Collections.singletonList(
+                            List.of(
                                     OpenLMessagesUtils.newErrorMessage("Failed to execute validator: %s. %s".formatted(
                                             validator.getClass().getTypeName(),
                                             ExceptionUtils.getRootCauseMessage(e)))));
