@@ -2,7 +2,6 @@ package org.openl.rules.webstudio.web.diff;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -22,7 +21,7 @@ public class ExcelDiffController extends AbstractDiffController {
      */
     protected static final int MAX_FILES_COUNT = 2;
 
-    private List<File> filesToCompare = Collections.emptyList();
+    private List<File> filesToCompare = List.of();
 
     protected String changesStatus;
 
