@@ -1,7 +1,6 @@
 package org.openl.rules.openapi;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -101,7 +100,7 @@ public class OpenAPIRefResolver {
                 allPropertiesCache.put(resolvedSchema, allSchemaProperties);
             }
         } else {
-            allSchemaProperties = schema.getProperties() != null ? schema.getProperties() : Collections.emptyMap();
+            allSchemaProperties = schema.getProperties() != null ? schema.getProperties() : Map.of();
         }
         allPropertiesCache.put(schema, allSchemaProperties);
         return allSchemaProperties;
